tests/baselines/reference/extendedInterfacesWithDuplicateTypeParameters.errors.txt
tests/cases/compiler/extendedInterfacesWithDuplicateTypeParameters.ts(1,42): error TS2300: Duplicate identifier 'A'.
tests/cases/compiler/extendedInterfacesWithDuplicateTypeParameters.ts(9,11): error TS2428: All declarations of an interface must have identical type parameters.
tests/cases/compiler/extendedInterfacesWithDuplicateTypeParameters.ts(9,38): error TS2300: Duplicate identifier 'C'.


==== tests/cases/compiler/extendedInterfacesWithDuplicateTypeParameters.ts (3 errors) ====
    interface InterfaceWithMultipleTypars<A, A> { // should error
                                             ~
!!! error TS2300: Duplicate identifier 'A'.
    	bar(): void;
    }
    
    interface InterfaceWithSomeTypars<B> { // should not error
    	bar(): void;
    }
    
    interface InterfaceWithSomeTypars<C, C> { // should error
              ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2428: All declarations of an interface must have identical type parameters.
                                         ~
!!! error TS2300: Duplicate identifier 'C'.
    	bar2(): void;
    }